--- a/HuaShanApp/app/src/main/res/layout/activity_home.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_home.xml
@@ -62,8 +62,9 @@
                     android:layout_width="0dp"
                     app:layout_widthPercent="5%"
                     android:layout_height="match_parent"
-                    android:background="#000"
+
                     android:onClick="@{handler.setUp}"
+                    android:src="@drawable/setting_icon"
                     />
             </android.support.percent.PercentRelativeLayout>
         </LinearLayout>
