--- a/HuaShanApp/app/src/main/res/layout/activity_register_2.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_register_2.xml
@@ -120,6 +120,7 @@
                     android:text="重新发送"/>
 
                 <TextView
+                    android:id="@+id/time"
                     app:layout_widthPercent="12%"
                     app:layout_heightPercent="10%"
                     android:layout_gravity="right"
@@ -140,6 +141,7 @@
                 android:textSize="@dimen/app_text_size"
                 android:textColor="#fff"
                 android:clickable="true"
+                android:onClick="@{handler.w}"
                 />
 
 
