--- a/HuaShanApp/app/src/main/res/layout/activity_register_3.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_register_3.xml
@@ -33,9 +33,11 @@
 
         <ImageView
 
-        android:layout_width="0dp"
-        app:layout_widthPercent="7%"
-        android:layout_height="match_parent"
+            android:layout_width="0dp"
+            app:layout_widthPercent="7%"
+            android:layout_height="match_parent"
+            android:src="@drawable/back_icon"
+            android:onClick="@{handler.onBack}"
         />
 
         </android.support.percent.PercentRelativeLayout>
@@ -75,13 +77,120 @@
             >
 
 
+            <android.support.percent.PercentFrameLayout
+                android:id="@+id/content_pl"
+                app:layout_widthPercent="88%"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_fillet_ffffff_5dp"
+                app:layout_marginTopPercent ="10%"
+                android:layout_gravity="center_horizontal"
+
+                >
+
+
+                <ImageView
+                    app:layout_widthPercent="100%"
+                    android:layout_height="1dp"
+                    android:background="@color/register_content_line_color"
+                    android:layout_gravity="bottom|center_horizontal">
+
+                </ImageView>
+
+                <EditText
+                    android:id="@+id/ed_password_register"
+                    app:layout_widthPercent="100%"
+                    app:layout_heightPercent="10%"
+                    android:layout_gravity="left"
+                    android:hint="请设置6-20位的登录密码"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:maxLength="20"
+                    android:background="@null"
+                    android:textColorHint="@color/login_hint_text_color"
+                    android:textSize="@dimen/login_text_size"/>
+
+
+                <ImageView
+                    android:id="@+id/show_icon"
+                    app:layout_widthPercent="20%"
+                    app:layout_heightPercent="5%"
+                    android:layout_gravity="right|center_vertical"
+                    android:gravity="center"
+                    android:src="@drawable/bg_password_show"
+                    />
+            </android.support.percent.PercentFrameLayout>
+
+
+            <TextView
+                android:id="@+id/btn_complete"
+                app:layout_widthPercent="88%"
+                app:layout_heightPercent="8%"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                app:layout_marginTopPercent="30%"
+                android:background="@drawable/bg_fillet_adadad_5dp"
+                android:text="完成"
+                android:textSize="@dimen/app_text_size"
+                android:textColor="#fff"
+                android:clickable="true"
+                android:onClick="@{handler.complete}"
+                />
+
+            <TextView
+                app:layout_widthPercent="60%"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="点击“完成”意味着您同意"
+                app:layout_marginTopPercent="42%"
+                android:textColor="@color/register_user_agreement_text_color_1"
+                android:textSize="@dimen/register_user_agreement_text_size"
+
+                />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register3"
+                android:layout_gravity="left"
+                app:layout_marginTopPercent="42%"
+                app:layout_marginLeftPercent="60%"
+                android:text="用户协议"
+                android:textColor="@color/register_user_agreement_text_color_2"
+                android:textSize="@dimen/register_user_agreement_text_size"
+                android:onClick="@{handler.userAgreement}"
                 />
 
 
+        </android.support.percent.PercentFrameLayout>
+
+        <android.support.percent.PercentFrameLayout
+            android:id="@+id/useragreement_pl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#50000000"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:id="@+id/useragreement_ll"
+                app:layout_widthPercent="100%"
+                app:layout_heightPercent="92%"
+                android:layout_gravity="bottom"
+                android:orientation="vertical"
+                android:background="#fff"
+                android:visibility="gone"
+                >
+
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                app:layout_marginTopPercent="10%"
+                app:layout_marginRightPercent="5%"
+                android:layout_gravity="right"
+                android:background="@drawable/down_icon"
+                android:onClick="@{handler.stopUserAgreement}"
+                />
 
         </android.support.percent.PercentFrameLayout>
     </android.support.percent.PercentRelativeLayout>
