--- a/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_verify.xml
+++ b/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_verify.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#48443c" >
+    android:background="@drawable/beijing" >
 
     <RelativeLayout
         android:id="@+id/top_layout"
