--- a/HuaShanApp/app/src/main/res/layout/activity_home.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_home.xml
@@ -25,6 +25,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_heightPercent="8%"
+            android:visibility="gone"
             >
 
             <android.support.percent.PercentRelativeLayout
@@ -71,7 +72,7 @@
 
         <android.support.percent.PercentRelativeLayout
             android:layout_width="match_parent"
-            app:layout_heightPercent="92%"
+            app:layout_heightPercent="100%"
             android:layout_gravity="bottom"
             >
 
@@ -85,7 +86,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                app:layout_heightPercent="87%">
+                app:layout_heightPercent="90%">
 
             </com.example.utils.custom.ScrollableViewPager>
 
@@ -102,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:layout_alignParentBottom="true"
-                app:layout_heightPercent="13%">
+                app:layout_heightPercent="10%">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -110,22 +111,22 @@
                     android:layout_weight="1"
                     android:descendantFocusability="beforeDescendants"
                     android:gravity="center"
-                    android:onClick="@{handler.toFinanec}"
+                    android:onClick="@{handler.toToday}"
                     android:orientation="vertical">
 
                     <ImageView
 
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:padding="5dp"
                         android:background="#000"
                     />
 
                     <TextView
-                        android:id="@+id/finance_text"
+                        android:id="@+id/today_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="金融"
+                        android:text="今日"
                         android:textSize="@dimen/homeactivity_bottom_text_size"
                         android:textStyle="bold" />
 
@@ -142,8 +143,8 @@
 
                     <ImageView
 
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:padding="5dp"
                         android:background="#000"
                     />
@@ -169,8 +170,8 @@
 
                     <ImageView
 
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:padding="5dp"
                         android:background="#000"
                         />
@@ -197,8 +198,8 @@
 
                     <ImageView
 
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:padding="5dp"
                         android:background="#000"
                         />
