--- a/HuaShanApp/app/src/main/res/values/dimens.xml
+++ b/HuaShanApp/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
 
     <dimen name="title_text_size">15dp</dimen>
     <!--homeactivity-->
-    <dimen name="homeactivity_bottom_text_size">15dp</dimen>
+    <dimen name="homeactivity_bottom_text_size">12dp</dimen>
 
     <!--finance-->
     <dimen name="financefragment_calculator_text_size_1">19dp</dimen>
@@ -41,6 +41,12 @@
     <dimen name="my_pf1_content_text_size_2">18dp</dimen>
 
     <dimen name="my_pf2_content_text_size">15dp</dimen>
+    
+    <!--today-->
+    <dimen name="todayfragment_profit_text_size_1">11dp</dimen>
+    <dimen name="todayfragment_profit_text_size_2">25pt</dimen>
 
+    <dimen name="todayfragment_part3_text_size">13dp</dimen>
 
+    <dimen name="todayfragment_part4_text_size">20dp</dimen>
 </resources>
