--- a/HuaShanApp/app/src/main/res/layout/fragment_today.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_today.xml
@@ -86,11 +86,44 @@
                     android:orientation="vertical">
 
 
+                    <android.support.percent.PercentFrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        app:layout_heightPercent="10%"
+
+                        >
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/userhead_icon"
+                            android:layout_gravity="center_vertical"
+                            app:layout_marginLeftPercent="5%"/>
+
+                        <android.support.percent.PercentFrameLayout
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/calendar_icon"
+                            android:layout_gravity="center_vertical|right"
+                            app:layout_marginRightPercent="5%">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_marginTopPercent="10%"
+                                android:layout_gravity="center"
+                                android:text="24"
+                                android:textColor="#fff"/>
+
+                        </android.support.percent.PercentFrameLayout>
+
+                    </android.support.percent.PercentFrameLayout>
+
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:layout_marginTop="60dp"
+                            android:layout_marginTop="10dp"
                             android:text="今日最新收益(元)"
                             android:textSize="@dimen/todayfragment_profit_text_size_1"/>
 
@@ -111,12 +144,12 @@
 
                     <android.support.percent.PercentFrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="70dp"
                         >
 
                         <ImageView
                             android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             app:layout_marginTopPercent="12%"
                             app:layout_marginLeftPercent="15%"
                             android:layout_gravity="left"
@@ -124,14 +157,14 @@
 
                         <ImageView
                             android:layout_width="40dp"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             app:layout_marginTopPercent="12%"
                             android:layout_gravity="center_horizontal"
                             android:src="@drawable/qiye"/>
 
                         <ImageView
                             android:layout_width="60dp"
-                            android:layout_height="40dp"
+                            android:layout_height="30dp"
                             app:layout_marginTopPercent="12%"
                             app:layout_marginRightPercent="15%"
                             android:layout_gravity="right"
@@ -175,19 +208,39 @@
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="10dp"
+                        android:layout_height="5dp"
                         android:background="@color/todayfragment_line_color"/>
 
+                    <!--滚动广告条-->
                     <android.support.percent.PercentFrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="90dp"
-                        android:background="#fcf">
+                        android:layout_height="110dp"
+                        >
+
+                        <com.example.utils.custom.views.AutoScrollViewPager
+                            android:id="@+id/today_scroll_pager"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#cfa">
+
+                        </com.example.utils.custom.views.AutoScrollViewPager>
+
+                        <com.example.utils.custom.views.ViewGroupIndicator
+                            xmlns:indicator="http://schemas.android.com/apk/res-auto"
+                            android:id="@+id/today_scroll_pager_indicator"
+                            android:layout_width="wrap_content"
+                            android:layout_height="25dp"
+                            android:layout_gravity="bottom"
+                            indicator:selected_color="#50505050"
+                            indicator:unselected_color="#00ffffff"
+                            indicator:distance_from_two_indicator="20dp"
+                            indicator:radius="3dp"/>
 
                     </android.support.percent.PercentFrameLayout>
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="10dp"
+                        android:layout_height="5dp"
                         android:background="@color/todayfragment_line_color"/>
 
                     <android.support.percent.PercentFrameLayout
@@ -378,37 +431,7 @@
         </android.support.v4.widget.SwipeRefreshLayout>
 
 
-        <android.support.percent.PercentFrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:layout_heightPercent="10%"
 
-            >
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/userhead_icon"
-                android:layout_gravity="center_vertical"
-                app:layout_marginLeftPercent="5%"/>
-
-            <android.support.percent.PercentFrameLayout
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/calendar_icon"
-                android:layout_gravity="center_vertical|right"
-                app:layout_marginRightPercent="5%">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_marginTopPercent="10%"
-                    android:layout_gravity="center"
-                    android:text="24"
-                    android:textColor="#fff"/>
-
-            </android.support.percent.PercentFrameLayout>
-
-        </android.support.percent.PercentFrameLayout>
 
     </android.support.percent.PercentRelativeLayout>
 </layout>
