--- a/HuaShanApp/app/src/main/res/values/colors.xml
+++ b/HuaShanApp/app/src/main/res/values/colors.xml
@@ -55,4 +55,22 @@
     <color name="todayfragment_part3_text_color">#505050</color>
 
     <color name="todayfragment_part4_text_color">#505050</color>
+
+
+
+
+    <!--SpringIndicator-->
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="black_light">#99444444</color>
+    <color name="gray_dark">#616161</color>
+    <color name="gray_light">#9e9e9e</color>
+    <color name="brown">#5d4037</color>
+    <color name="cfa">#cfa</color>
+
+    <color name="indicator_1">#55B3C2</color>
+    <color name="indicator_2">#64A4A4</color>
+    <color name="indicator_3">#66D7B9</color>
+    <color name="indicator_4">#FDBC7D</color>
+    <color name="indicator_5">#cfa</color>
 </resources>
